<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.api</groupId>
	<artifactId>arimapi-parent</artifactId>
	<!-- Remember to update versions in all child modules -->
	<version>0.18.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>ArimAPI</name>
	<description>An efficient, easy-to-use minecraft plugin library and framework.</description>
	<url>https://github.com/Arim-Minecraft/ArimAPI</url>
	<inceptionYear>2019</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
    	<maven.compiler.target>11</maven.compiler.target>
		
		<!-- Testing dependencies -->
		<junit.version>5.6.2</junit.version>
		
		<!-- Required dependencies -->
		<omnibus.version>0.15.3-SNAPSHOT</omnibus.version>
		
		<!-- Optional dependencies -->
		<hikari.version>3.4.5</hikari.version>
		<slf4j.version>1.7.25</slf4j.version><!-- Included on Paper 1.12.2+, Waterfall, Sponge, and Velocity -->
		
		<!-- Shaded with server software -->
		<guava.version>28.2-jre</guava.version>
		<gson.version>2.8.6</gson.version>
		<snakeyaml.version>1.26</snakeyaml.version>
	</properties>
	
	<licenses>
		<license>
			<name>GNU General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/</url>
			<distribution>repo</distribution>
			<comments>Strong copyleft license, commonly known as the GNU GPL v3</comments>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<url>https://www.arim.space</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>aggregate</goal>
							<goal>aggregate-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<trimStackTrace>false</trimStackTrace>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.junit.jupiter</groupId>
							<artifactId>junit-jupiter-engine</artifactId>
							<version>${junit.version}</version>
							<scope>runtime</scope>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<modules>
		<module>api-chat</module>
		<module>api-util</module>
		<module>api-env</module>
		<module>api-all</module>
		<module>api-assemble</module>
		<module>api-assemble-noplugin</module>
	</modules>
	
	<distributionManagement>
		<repository>
			<id>arim-repo</id>
			<url>https://maven.cloudsmith.io/anand-beh/arim-repo/</url>
		</repository>
		<snapshotRepository>
			<id>arim-repo</id>
			<url>https://maven.cloudsmith.io/anand-beh/arim-repo/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<dependencyManagement>
		<dependencies>
			<!-- Internal dependencies -->
			<dependency>
				<groupId>space.arim.api</groupId>
				<artifactId>arimapi-chat</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.api</groupId>
				<artifactId>arimapi-util</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.api</groupId>
				<artifactId>arimapi-env-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.api</groupId>
				<artifactId>arimapi-env-plugin</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.api</groupId>
				<artifactId>arimapi-all</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<!-- Testing Dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			
			<!-- Optional dependencies -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>${hikari.version}</version>
				<optional>true</optional>
			</dependency>
			
			<!-- Shaded dependencies -->
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-util</artifactId>
				<version>${omnibus.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-all</artifactId>
				<version>${omnibus.version}</version>
			</dependency>
			
			<!-- Shaded with server software -->
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<repositories>
		<repository>
			<id>arim-repo</id>
			<url>https://www.arim.space/maven/</url>
		</repository>
	</repositories>
</project>